klipper: provide a data source to avoid empty clipboard when opening popup

When the clipboard popup is open the clipboard owner changes and the system clipboard expects a data source from plasmashell.

BUG: 502831
FIXED-IN: 6.4.0